<resources>
    <string name="app_name">Amb Dispatch Admin</string>

    <string name="app_logo">Amb Dispatch Admin</string>

    <string name="action_settings">Settings</string>
    <string name="profile_phoneText">Tel.</string>
    <string name="profile_phone">08023456789</string>
    <string name="profile_ambText">No. of Ambulance</string>
    <string name="profile_amb">3</string>
    <string name="gender">Gender</string>
    <string name="genderText">Female</string>
    <string name="date_of_birthText">19th, May 1995</string>
    <string name="bloodGroupText">A+</string>
    <string name="profile_name">Health Centre</string>
    <string name="profile_add">Covenant University</string>
    <string name="logo_desc">Ambulance Dispatch Logo</string>
    <string name="dialog_title">Location Services</string>
    <string name="dialog_message">Location Services required to use this app</string>
    <string name="OK">Settings</string>
    <string name="cancel">Cancel</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">
        Access to the location service is required to use this feature,
        which shows your current location on the map.
    </string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer.
        Please try again and grant access to use the location.\nIf the permission has been permanently denied,
        it can be enabled from the System Settings &gt; Apps &gt; .
    </string>
    <string name="permission_required_toast">Location permission is required for this app.</string>

    <string name="about_description">This application is to enhance the capabilities of 911 ambulance dispatches in the timely displacement of ambulance(s) to injury scenes in an efficient manner..</string>

    <string name="about_name">This application is to enhance the capabilities of 911 ambulance dispatches in the timely displacement of ambulance(s) to injury scenes in an efficient manner..</string>
    <string name="about_license">This application is free and open source, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
    <string name="about_web">For more information visit\nwww.github.org/allebd</string>
    <string name="title_activity_sidebar">sidebar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
